--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.17.0",
+    "@ionic-native/local-notifications": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
     "@ionic-native/network": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
@@ -28,9 +29,11 @@
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "cordova-android": "^7.1.4",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-network-information": "2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -60,7 +63,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
