--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "date-fns": "^1.30.1",
     "ionic-angular": "3.9.2",
     "ionic-text-avatar": "^1.1.0",
     "ionicons": "3.0.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
     "@ionic/lab": "1.0.15",
+    "babel-plugin-date-fns": "^0.2.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
